core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__spread.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT SPREAD(usage_idle) as cpu_usage_idle FROM cpu\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), cpu_usage_idle:Float64;N]
  Projection: Dictionary(Int32, Utf8("cpu")) AS iox::measurement, TimestampNanosecond(0, None) AS time, spread(cpu.usage_idle) AS cpu_usage_idle [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), cpu_usage_idle:Float64;N]
    Filter: __aggr_count > Int64(0) [spread(cpu.usage_idle):Float64;N, __aggr_count:Int64]
      Aggregate: groupBy=[[]], aggr=[[spread(cpu.usage_idle), count(Int64(1)) AS __aggr_count]] [spread(cpu.usage_idle):Float64;N, __aggr_count:Int64]
        Filter: cpu.usage_idle IS NOT NULL [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
          TableScan: cpu [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
