core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__time_range_in_where-3.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT foo, f64_field FROM data where time > '2004-04-09T'\")"
---
rewriting statement
caused by
split condition
caused by
Error during planning: invalid expression "'2004-04-09T'": '2004-04-09T' is not a valid timestamp
