core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__time_range_in_where-5.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT foo, f64_field FROM data where time != 0\")"
---
rewriting statement
caused by
split condition
caused by
Error during planning: invalid time comparison operator: !=
